# socket_communication

./: .gitignore  CMakeLists.txt  README.md  socket_communication.cc  socket_communication.h  ssl_test.cc  test.cc  test.py
callback_function/: CMakeLists.txt  callback_function.cc  callback_function.h
publisher/: CMakeLists.txt  publisher.cc  publisher.h
