cmake_minimum_required(VERSION 3.14)
project(socket_communication)
include_directories(3rdparty)
include_directories(3rdparty/nlohmann)
include_directories(callback_function)
set(CMAKE_CXX_STANDARD 14)
add_subdirectory(callback_function)
add_library(SocketCommunication socket_communication.cc socket_communication.h)
link_libraries(SocketCommunication pthread CallbackFunction)
add_executable(test test.cc)
link_libraries(test SocketCommunication)