cmake_minimum_required(VERSION 3.14)
project(socket_communication)
include_directories(3rdparty)
include_directories(3rdparty/nlohmann)
include_directories(callback_function)
include_directories(publisher)
set(CMAKE_CXX_STANDARD 14)
add_subdirectory(callback_function)
add_subdirectory(publisher)
add_library(SocketCommunication socket_communication.cc socket_communication.h)
link_libraries(SocketCommunication pthread CallbackFunction)
add_executable(test test.cc)
target_link_libraries(test SocketCommunication SocketPublisher)

#add_executable(ssl_test ssl_test.cc)
#target_link_libraries(ssl_test ssl crypto)